Make simple search the default

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -199,7 +199,7 @@
         <label class="custom-control-label" for="direct-only">Direct only</label>
       </div>
       <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="simple-paths">
+        <input type="checkbox" class="custom-control-input" id="simple-paths" checked>
         <label class="custom-control-label" for="simple-paths">Simple path search</label>
       </div>
       <div class="custom-control custom-checkbox">
