--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -25,6 +25,10 @@
     a {
       target-new: tab;
     }
+    .choices__list--multiple .choices__item {
+      background-color: #007bff;
+      border: #007bff;
+    }
   </style>
 
   <!-- custom scripts -->
@@ -32,6 +36,39 @@
     const SUBMIT_URL = 'http://localhost:5000/query/submit';
     const INDRA_DB_URL_HASH = 'https://db.indra.bio/statements/from_hash/';
     const MAX_K_PATHS = 50
+    const stmtOptions = ['Acetylation', 'Activation', 'Deacetylation', 'DecreaseAmount', 
+      'Defarnesylation', 'Deglycosylation', 'Dehydroxylation', 'Demethylation', 
+      'Depalmitoylation', 'Dephosphorylation', 'Deribosylation', 'Desumoylation', 
+      'Deubiquitination', 'Farnesylation', 'Gap', 'Gef', 'Glycosylation', 'GtpActivation', 
+      'Hydroxylation', 'IncreaseAmount', 'Inhibition', 'Methylation', 'Myristoylation', 
+      'Palmitoylation', 'Phosphorylation', 'Ribosylation', 'Sumoylation', 'Ubiquitination']
+    const nodeOptions = ['CHEBI', 'FPLX', 'GO', 'HGNC', 'HMDB', 'MESH', 'PUBCHEM']
+
+    $(document).ready(function() {
+      populateOptions()
+      var stmtFilter = new Choices('#stmt-filter')
+      var nodeFilter = new Choices('#node-filter')
+    })
+
+    function populateOptions() {
+      // Edge filters
+      let ssel = document.getElementById('stmt-filter')
+      for (s of stmtOptions) {
+        let o = document.createElement('option');
+        o.value = s.toLowerCase();
+        o.textContent = s;
+        ssel.appendChild(o);
+      }
+
+      // Node filters
+      let nsel = document.getElementById('node-filter')
+      for (n of nodeOptions) {
+        let o = document.createElement('option');
+        o.value = n;
+        o.textContent = n;
+        nsel.appendChild(o);
+      }      
+    }
 
     function submitQuery() {
       if (!document.getElementById('path-length').value) {
@@ -197,13 +234,18 @@
           </div>
         </div>
       </div>
-      <div class="row" style="padding-top: 5px;">
-        <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
-          <label><select id="sign-dd" disabled>
-            <option selected="selected" value="no_sign">No sign</option>
-            <option value="plus">+</option>
-            <option value="minus">-</option>
-          </select>&nbsp;&nbsp;Sign</label>
+      <div class="row" style="padding-top: 10px;">
+        <div class="col">
+          <div class="form-select">
+            <select name="stmt-filter" id="stmt-filter" placeholder="Statement types excluded from path" multiple>
+            </select>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-select">
+            <select name="node-filter" id="node-filter" placeholder="Node namespaces excluded from path" multiple>
+            </select>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -211,6 +253,15 @@
           <label><div class="container" style="width: 90px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="0.01" name="belief_cutoff" id="belief-cutoff" min="0" max="1">
           </div>&nbsp;&nbsp;Belief Score cut-off (0 to 1)</label>
+        </div>
+      </div>
+      <div class="row" style="padding-top: 5px;">
+        <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
+          <label><select id="sign-dd" disabled>
+            <option selected="selected" value="no_sign">No sign</option>
+            <option value="plus">+</option>
+            <option value="minus">-</option>
+          </select>&nbsp;&nbsp;Sign</label>
         </div>
       </div>
       <div class="custom-control custom-checkbox">
