Add card for common targets

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -426,6 +426,33 @@
         </div>
       </div>
     </div>
+    <!-- Common Targets -->
+    <div class="card">
+      <div class="card-header">
+        <h3 class="display-7">
+          <a href="#"
+             class="stmt_toggle"
+             data-toggle="collapse"
+             data-target="#collapse-common-targets"
+             aria-expanded="false"
+             aria-controls="collapse-common-targets">
+            Common Targets (A&rarr;Z&larr;B)
+          </a>
+          <span id="common-targets" class="badge badge-primary badge-pill float-right path-count">Paths: 0</span>
+        </h3>
+      </div>
+      <div id="collapse-common-targets" class="collapse">
+        <div class="card-body">
+          <table class="table">
+            <thead class="table-head">
+              <th>Path</th>
+              <th>Support</th>
+            </thead>
+            <tbody class="table-body" id="query-results-common-targets"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer class="footer text-muted" id="about" style="background: #F5F5F5;">
